Correcciones del afterclass

--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
 
     <link rel="icon" href="/img/favicon-wanderelus.png" type="image/x-icon">
     <title>Wanderlust - Tu guía de viaje</title>
+    <meta name="description"
+    content="Te ayudamos a armar tu viaje, qué ver, dónde hospedarte, qué comer y cuáles las joyas ocultas de cada destino">
     <meta name="keywords" content="Vuelos, hoteles, lugares turísticos, viaje, reseñas, playas, destino turístico">
 
 </head>
 
 <header>
+    <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <img src="./img/logowanderlust.png" alt="Logo Wanderlust" class="logo">
@@ -159,7 +162,7 @@
         <section class="reseñas__tarjetas">
 
             <article class="reseñas__tarjetas__contenedor">
-                <img class="reseñas__tarjetas__imagen" src="./img/reseña1.jpg" class=usuario
+                <img class="reseñas__tarjetas__imagen" src="./img/resena1.jpg" class=usuario
                     alt="mujer joven de espaldas con mochilla y cámara en mano, en una montaña">
                 <h5 class="reseñas__tarjetas__user-name">María González</h5>
                 <h6 class="reseñas__tarjetas__user-country">España</h6>
@@ -171,7 +174,7 @@
             </article>
 
             <article class="reseñas__tarjetas__contenedor">
-                <img class="reseñas__tarjetas__imagen" src="./img/reseña2.jpg" class=usuario
+                <img class="reseñas__tarjetas__imagen" src="./img/resena2.jpg" class=usuario
                     alt="hombre joven con lentes de sol y un pasaje en mano, en una terminal" class="user">
                 <h5 class="reseñas__tarjetas__user-name">Sebastián Camargo</h5>
                 <h6 class="reseñas__tarjetas__user-country">Colombia</h6>
@@ -183,7 +186,7 @@
             </article>
 
             <article class="reseñas__tarjetas__contenedor">
-                <img class="reseñas__tarjetas__imagen" src="./img/reseña3.jpg" class=usuario
+                <img class="reseñas__tarjetas__imagen" src="./img/resena3.jpg" class=usuario
                     alt="anciana de pelo corto haciendo trekking en la montaña" class="user">
                 <h5 class="reseñas__tarjetas__user-name">Rosa Ferreira</h5>
                 <h6 class="reseñas__tarjetas__user-country"> Uruguay</h6>
@@ -195,11 +198,11 @@
             </article>
 
             <article class="reseñas__tarjetas__contenedor">
-                <img class="reseñas__tarjetas__imagen" src="./img/reseña4.jpg" class=usuario
+                <img class="reseñas__tarjetas__imagen" src="./img/resena4.jpg" class=usuario
                     alt="anciana de pelo corto haciendo trekking en la montaña" class="user">
                 <h5 class="reseñas__tarjetas__user-name">Claudio Blanco</h5>
                 <h6 class="reseñas__tarjetas__user-country"> Argentina</h6>
-                <img class="reseñas__tarjetas__imgreseña" src="/img/castillohighclere.jpeg" class=img-reseña
+                <img class="reseñas__tarjetas__imgreseña" src="./img/castillohighclere.jpeg" class=img-reseña
                     alt="vista de unos de los pasillos del mercado de la concepció en barcelona">
                 <p class="reseñas__tarjetas__user-opinion">Soñado paseo a una hora de distancia de Londres.</p>
                 <img src="./img/star-03.png" class="reseñas__tarjetas__estrellas" alt="valoracion de dos estrellas">
@@ -215,16 +218,16 @@
 
             <ul class="footer__iconos-rrss">
                 <li><a href="https://www.facebook.com" target="blank">
-                        <img src="/img/fb.png" alt="logo facebook">
+                        <img src="./img/fb.png" alt="logo facebook">
                     </a></li>
                 <li><a href="https://www.instagram.com" target="blank">
-                        <img src="/img/inst.png" alt="logo instagram">
+                        <img src="./img/inst.png" alt="logo instagram">
                     </a></li>
                 <li><a href="https://www.tiktok.com" target="blank">
-                        <img src="/img/tik.png" alt="logo tiktok">
+                        <img src="./img/tik.png" alt="logo tiktok">
                     </a></li>
                 <li><a href="https://www.twitter.com" target="blank">
-                        <img src="/img/tw.png" alt="logo twitter">
+                        <img src="./img/tw.png" alt="logo twitter">
                     </a></li>
             </ul>
 
