--- a/pages/explorar.html
+++ b/pages/explorar.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
-    <link rel="icon" href="/img/favicon-wanderelus.png" type="image/x-icon">
+    <link rel="icon" href="../img/favicon-wanderelus.png" type="image/x-icon">
 
     <title>Explorá y armá el itienerario de tu viaje</title>
     <meta name="description"
@@ -104,7 +104,7 @@
         <div class="lugares">
             <section class="lugares__destacados">
                 <article class="lugares__destacados__tarjetas">
-                    <img class="lugares__destacados__imagen" src="/img/armando-resto.jpeg"
+                    <img class="lugares__destacados__imagen" src="../img/armando-resto.jpeg"
                         alt="fachada del restaurante Armando al Pantheon y personas esperando">
                     <h3 class="lugares__destacados__titulo">Armando al Pantheon</h3>
                     <p class="lugares__destacados__parrafo">Restaurante de larga data con porciones abundantes de comida
@@ -112,7 +112,7 @@
                 </article>
 
                 <article class="lugares__destacados__tarjetas">
-                    <img class="lugares__destacados__imagen" src="/img/alfredo-resto.png"
+                    <img class="lugares__destacados__imagen" src="../img/alfredo-resto.png"
                         alt="tres platos de fetuchini">
                     <h3 class="lugares__destacados__titulo">Alfredo Alla Scrofa</h3>
                     <p class="lugares__destacados__parrafo">Restaurante tradicional de 1907 conocido por su fetuchini
@@ -120,7 +120,7 @@
                 </article>
 
                 <article class="lugares__destacados__tarjetas">
-                    <img class="lugares__destacados__imagen" src="/img/antica-resto.jpeg"
+                    <img class="lugares__destacados__imagen" src="../img/antica-resto.jpeg"
                         alt="frente del restaurante antica osteria da giovanni">
                     <h3 class="lugares__destacados__titulo">Antica osteria Da Giovanni</h3>
                     <p class="lugares__destacados__parrafo">Comida casera sencilla en un restaurante informal con
@@ -128,7 +128,7 @@
                 </article>
 
                 <article class="lugares__destacados__tarjetas">
-                    <img class="lugares__destacados__imagen" src="/img/piperno-resto.png"
+                    <img class="lugares__destacados__imagen" src="../img/piperno-resto.png"
                         alt="mesas y sombrillas en el patio de piperno restaurante">
                     <h3 class="lugares__destacados__titulo">Piperno Restaurant</h3>
                     <p class="lugares__destacados__parrafo">Restaurante consolidado de cocina judía selecta con platos
@@ -136,14 +136,14 @@
                 </article>
 
                 <article class="lugares__destacados__tarjetas">
-                    <img class="lugares__destacados__imagen" src="/img/lascalinata-resto.png"
+                    <img class="lugares__destacados__imagen" src="../img/lascalinata-resto.png"
                         alt="tentadora pizza margherita">
                     <h3 class="lugares__destacados__titulo">La Scalinata</h3>
                     <p class="lugares__destacados__parrafo">Restaurante informal de cocina romana tradicional.</p>
                 </article>
 
                 <article class="lugares__destacados__tarjetas">
-                    <img class="lugares__destacados__imagen" src="/img/saltimboca-resto.png"
+                    <img class="lugares__destacados__imagen" src="../img/saltimboca-resto.png"
                         alt="plato de pasta, cazuela de mariscos y aperol spritz">
                     <h3 class="lugares__destacados__titulo">Saltimbocca Ristorante</h3>
                     <p class="lugares__destacados__parrafo">Local alegre de platos italianos tradicionales y terraza
@@ -162,7 +162,7 @@
             <section class="registro">
 
                 <div class="registro__ilustracion">
-                    <img src="/img/ilus-viajero-01.png"
+                    <img src="../img/ilus-viajero-01.png"
                         alt="iliustración de un joven viajero sonriente sosteniendo una valija con la ciudad de fondo"
                         class="viajeros">
                 </div>
@@ -188,7 +188,7 @@
             <section class="reseñas__tarjetas">
 
                 <article class="reseñas__tarjetas__contenedor">
-                    <img class="reseñas__tarjetas__imagen" src="../img/reseña1.jpg" class=usuario
+                    <img class="reseñas__tarjetas__imagen" src="../img/resena1.jpg" class=usuario
                         alt="mujer joven de espaldas con mochilla y cámara en mano, en una montaña">
                     <h5 class="reseñas__tarjetas__user-name">María González</h5>
                     <h6 class="reseñas__tarjetas__user-country">España</h6>
@@ -201,7 +201,7 @@
                 </article>
 
                 <article class="reseñas__tarjetas__contenedor">
-                    <img class="reseñas__tarjetas__imagen" src="../img/reseña2.jpg" class=usuario
+                    <img class="reseñas__tarjetas__imagen" src="../img/resena2.jpg" class=usuario
                         alt="hombre joven con lentes de sol y un pasaje en mano, en una terminal" class="user">
                     <h5 class="reseñas__tarjetas__user-name">Sebastián Camargo</h5>
                     <h6 class="reseñas__tarjetas__user-country">Colombia</h6>
@@ -214,7 +214,7 @@
                 </article>
 
                 <article class="reseñas__tarjetas__contenedor">
-                    <img class="reseñas__tarjetas__imagen" src="../img/reseña3.jpg" class=usuario
+                    <img class="reseñas__tarjetas__imagen" src="../img/resena3.jpg" class=usuario
                         alt="anciana de pelo corto haciendo trekking en la montaña" class="user">
                     <h5 class="reseñas__tarjetas__user-name">Rosa Ferreira</h5>
                     <h6 class="reseñas__tarjetas__user-country"> Uruguay</h6>
@@ -227,7 +227,7 @@
                 </article>
 
                 <article class="reseñas__tarjetas__contenedor">
-                    <img class="reseñas__tarjetas__imagen" src="../img/reseña4.jpg" class=usuario
+                    <img class="reseñas__tarjetas__imagen" src="../img/resena4.jpg" class=usuario
                         alt="anciana de pelo corto haciendo trekking en la montaña" class="user">
                     <h5 class="reseñas__tarjetas__user-name">Claudio Blanco</h5>
                     <h6 class="reseñas__tarjetas__user-country"> Argentina</h6>
@@ -249,16 +249,16 @@
 
                 <ul class="footer__iconos-rrss">
                     <li><a href="https://www.facebook.com" target="blank">
-                            <img src="/img/fb.png" alt="logo facebook">
+                            <img src="../img/fb.png" alt="logo facebook">
                         </a></li>
                     <li><a href="https://www.instagram.com" target="blank">
-                            <img src="/img/inst.png" alt="logo instagram">
+                            <img src="../img/inst.png" alt="logo instagram">
                         </a></li>
                     <li><a href="https://www.tiktok.com" target="blank">
-                            <img src="/img/tik.png" alt="logo tiktok">
+                            <img src="../img/tik.png" alt="logo tiktok">
                         </a></li>
                     <li><a href="https://www.twitter.com" target="blank">
-                            <img src="/img/tw.png" alt="logo twitter">
+                            <img src="../img/tw.png" alt="logo twitter">
                         </a></li>
                 </ul>
 
@@ -300,7 +300,7 @@
         </div>
 
         <div class="footer__siteinfo">
-            <p>Diseñado por<a href="www.agencialol.com.ar"> LOL Agencia</a> · Wanderlust® 2023 Todos los derechos
+            <p>Diseñado por<a href="https://www.agencialol.com.ar"> LOL Agencia</a> · Wanderlust® 2023 Todos los derechos
                 reservados.</p>
         </div>
     </footer>
