--- a/pages/vuelos.html
+++ b/pages/vuelos.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
-    <link rel="icon" href="/img/favicon-wanderelus.png" type="image/x-icon">
+    <link rel="icon" href="../img/favicon-wanderelus.png" type="image/x-icon">
 
     <title>Los mejores precios en vuelos y conexiones en todo el mundo.</title>
     <meta name="description"
@@ -103,14 +103,14 @@
             </div>
 
             <div class="resultado">
-                <img src="/img/vueling-logo.png" alt="logo aerolinea vueling" class="resultado__aerolinea-logo">
+                <img src="../img/vueling-logo.png" alt="logo aerolinea vueling" class="resultado__aerolinea-logo">
                 <p class="resultado__origen">BUE</p>
                 <p class="resultado__origen__fecha">09/06/2023</p>
                 <p class="resultado__origen__hora">10 am</p>
                 <p class="resultado__origen">RMA</p>
                 <p class="resultado__origen__fecha">10/06/2023</p>
                 <p class="resultado__origen__hora">12:15 am</p>
-                <img src="/img/valija.png" alt="icono de valija" class="resultado__icono-valija">
+                <img src="../img/valija.png" alt="icono de valija" class="resultado__icono-valija">
                 <p class="resultado__equipaje">Equipaje bodega <b>20 kg</b></p>
                 <p class="resultado__precio">€693</p>
                 <button class="boton-comprar">Comprar</button>
@@ -119,14 +119,14 @@
             <hr class="filtros-hr">
 
             <div class="resultado">
-                <img src="/img/rynair-logo.png" alt="logo aerolinea rynair" class="resultado__aerolinea-logo">
+                <img src="../img/rynair-logo.png" alt="logo aerolinea rynair" class="resultado__aerolinea-logo">
                 <p class="resultado__origen">BUE</p>
                 <p class="resultado__origen__fecha">09/06/2023</p>
                 <p class="resultado__origen__hora">2 pm</p>
                 <p class="resultado__origen">RMA</p>
                 <p class="resultado__origen__fecha">11/06/2023</p>
                 <p class="resultado__origen__hora">5 am</p>
-                <img src="/img/valija.png" alt="icono de valija" class="resultado__icono-valija">
+                <img src="../img/valija.png" alt="icono de valija" class="resultado__icono-valija">
                 <p class="resultado__equipaje">Equipaje bodega <b>25 kg</b></p>
                 <p class="resultado__precio">€613</p>
                 <button class="boton-comprar">Comprar</button>
@@ -137,14 +137,14 @@
 
 
             <div class="resultado">
-                <img src="/img/level-logo.png" alt="logo aerolinea level" class="resultado__aerolinea-logo">
+                <img src="../img/level-logo.png" alt="logo aerolinea level" class="resultado__aerolinea-logo">
                 <p class="resultado__origen">BUE</p>
                 <p class="resultado__origen__fecha">09/06/2023</p>
                 <p class="resultado__origen__hora">4 pm</p>
                 <p class="resultado__origen">RMA</p>
                 <p class="resultado__origen__fecha">11/06/2023</p>
                 <p class="resultado__origen__hora">4.:10 am</p>
-                <img src="/img/valija.png" alt="icono de valija" class="resultado__icono-valija">
+                <img src="../img/valija.png" alt="icono de valija" class="resultado__icono-valija">
                 <p class="resultado__equipaje">Equipaje <b>carry on 8kg</b></p>
                 <p class="resultado__precio">€569</p>
                 <button class="boton-comprar">Comprar</button>
@@ -155,7 +155,7 @@
 
         <section class="registro">
             <div class="registro__ilustracion">
-                <img src="/img/ilus-viajero-01.png"
+                <img src="../img/ilus-viajero-01.png"
                     alt="iliustración de un joven viajero sonriente sosteniendo una valija con la ciudad de fondo">
             </div>
             <div class="registro__textos">
@@ -181,16 +181,16 @@
 
                 <ul class="footer__iconos-rrss">
                     <li><a href="https://www.facebook.com" target="blank">
-                            <img src="/img/fb.png" alt="logo facebook">
+                            <img src="../img/fb.png" alt="logo facebook">
                         </a></li>
                     <li><a href="https://www.instagram.com" target="blank">
-                            <img src="/img/inst.png" alt="logo instagram">
+                            <img src="../img/inst.png" alt="logo instagram">
                         </a></li>
                     <li><a href="https://www.tiktok.com" target="blank">
-                            <img src="/img/tik.png" alt="logo tiktok">
+                            <img src="../img/tik.png" alt="logo tiktok">
                         </a></li>
                     <li><a href="https://www.twitter.com" target="blank">
-                            <img src="/img/tw.png" alt="logo twitter">
+                            <img src="../img/tw.png" alt="logo twitter">
                         </a></li>
                 </ul>
 
@@ -232,7 +232,7 @@
         </div>
 
         <div class="footer__siteinfo">
-            <p>Diseñado por<a href="www.agencialol.com.ar"> LOL Agencia</a> · Wanderlust® 2023 Todos los derechos
+            <p>Diseñado por<a href="https://www.agencialol.com.ar"> LOL Agencia</a> · Wanderlust® 2023 Todos los derechos
                 reservados.</p>
         </div>
     </footer>
