--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
     <title>Contactanos si tenés consultas o sugerencias</title>
-    <link rel="icon" href="/img/favicon-wanderelus.png" type="image/x-icon">
+    <link rel="icon" href="../img/favicon-wanderelus.png" type="image/x-icon">
 
 
     <meta name="description"
@@ -120,16 +120,16 @@
 
                 <ul class="footer__iconos-rrss">
                     <li><a href="https://www.facebook.com" target="blank">
-                            <img src="/img/fb.png" alt="logo facebook">
+                            <img src="../img/fb.png" alt="logo facebook">
                         </a></li>
                     <li><a href="https://www.instagram.com" target="blank">
-                            <img src="/img/inst.png" alt="logo instagram">
+                            <img src="../img/inst.png" alt="logo instagram">
                         </a></li>
                     <li><a href="https://www.tiktok.com" target="blank">
-                            <img src="/img/tik.png" alt="logo tiktok">
+                            <img src="../img/tik.png" alt="logo tiktok">
                         </a></li>
                     <li><a href="https://www.twitter.com" target="blank">
-                            <img src="/img/tw.png" alt="logo twitter">
+                            <img src="../img/tw.png" alt="logo twitter">
                         </a></li>
                 </ul>
 
@@ -171,7 +171,7 @@
         </div>
 
         <div class="footer__siteinfo">
-            <p>Diseñado por<a href="www.agencialol.com.ar"> LOL Agencia</a> · Wanderlust® 2023 Todos los derechos
+            <p>Diseñado por<a href="https://www.agencialol.com.ar"> LOL Agencia</a> · Wanderlust® 2023 Todos los derechos
                 reservados.</p>
         </div>
     </footer>
